force-app/main/default/objects/Product2/fields/Warehouse_SKU__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_SKU__c</fullName>
    <externalId>true</externalId>
    <label>Warehouse SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>