force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>Maintenance_Cycle__c</columns>
    <columns>Replacement_Part__c</columns>
    <columns>Warehouse_SKU__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Cost__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Lifespan_Months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Equipment</label>
</ListView>